fix(home-page): adjust css to align items inside grid

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -145,11 +145,11 @@
     align-items: end;
   }
 
-  .grid-container > *:first-child {
+  .gridContainer > *:first-child {
     grid-column: 2;
   }
 
-  .grid-container > *:last-child {
+  .gridContainer > *:last-child {
     grid-column: 3;
   }
 
